[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'

[tool.poetry]
name = 'requests-cache-demo'
version = '0.0.0'
description = ''
authors = ['Luis Marsano <luis.marsano@gmail.com>']
license = 'MIT'

[tool.poetry.dependencies]
python = '^3.9'
requests-cache = "^0.8.1"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
pytest = "^6.2.5"
betamax = "^0.8.1"
betamax-serializers = "^0.2.1"

[tool.pytest.ini_options]
junit_family = 'legacy'
testpaths = ['tests']

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
source_pkgs = ['requests_cache_demo']

[tool.mypy]
no_implicit_optional = true

[tool.yapf]
based_on_style = 'pep8'
column_limit = 88
#use_tabs = true
blank_lines_around_top_level_definition = 1
coalesce_brackets = true
#continuation_align_style = space fixed valign-right
continuation_indent_width = 2
dedent_closing_brackets = true
indent_dictionary_value = true
indent_width = 2
join_multiple_lines = false
space_between_ending_comma_and_closing_bracket = false
spaces_before_comment = 1
split_arguments_when_comma_terminated = true
split_before_arithmetic_operator = true
split_before_dot = true
split_before_expression_after_opening_paren = true
split_before_first_argument = true
split_complex_comprehension = true
